2009-09-24  Ivan Maidanski <ivmai@mail.ru>

	* pthread_support.c (start_mark_threads): Refine printed message.
	* win32_threads.c (GC_thr_init): Ditto.
	* win32_threads.c: Reformat some code pieces (wrap too long code
	lines).

2009-09-24  Ivan Maidanski <ivmai@mail.ru>
	(ivmai145.diff)

	* Makefile.direct (GC_WINMAIN_REDIRECT): Add the comment for.
	* Makefile.direct (NO_GETENV): Update the comment.
	* include/gc.h (GC_WINMAIN_WINCE_LPTSTR): Remove macro.
	* include/gc.h (GC_WinMain): Remove declaration.
	* include/gc.h (WinMain): Define (as GC_WinMain) if and only if
	GC_WINMAIN_REDIRECT.
	* tests/test.c (GC_COND_INIT): Define as GC_INIT() also in case of
	WinCE target unless GC_WINMAIN_REDIRECT is defined.
	* tests/test.c (WINMAIN_LPTSTR): New macro.
	* tests/test.c (WinMain): Use WINMAIN_LPTSTR instead of LP[W]STR
	and GC_WINMAIN_WINCE_LPTSTR.
	* win32_threads.c (start_mark_threads): Add the comment for
	MARK_THREAD_STACK_SIZE.
	* win32_threads.c: Recognize new GC_WINMAIN_REDIRECT macro.
	* win32_threads.c (WINMAIN_LPTSTR, WINMAIN_THREAD_STACK_SIZE): New
	macro (only if GC_WINMAIN_REDIRECT).
	* win32_threads.c: Undefine WinMain macro if GC_WINMAIN_REDIRECT.
	* win32_threads.c (GC_WinMain): Add prototype (only if
	GC_WINMAIN_REDIRECT).
	* win32_threads.c (main_thread_args, WinMain): Rename
	GC_WINMAIN_WINCE_LPTSTR to WINMAIN_LPTSTR.
	* win32_threads.c (WinMain): Call GC_INIT() instead of GC_init();
	use WINMAIN_THREAD_STACK_SIZE.
	* win32_threads.c (WinMain): Call GC_deinit() and
	DeleteCriticalSection() only if WinCE; add FIXME.

2009-09-24  Ivan Maidanski <ivmai@mail.ru>

	* os_dep.c (GC_get_main_stack_base): add assertion for mem_base
	value returned by GC_get_stack_base().

2009-09-23  Ivan Maidanski <ivmai@mail.ru>
	(ivmai150.diff)

	* Makefile.direct (MUNMAP_THRESHOLD, GC_FORCE_UNMAP_ON_GCOLLECT):
	Add the comment for.
	* alloc.c (GC_unmap_threshold, GC_force_unmap_on_gcollect):
	Declare external variable (only if USE_MUNMAP).